--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Accounts</h1>
 <div class="table-responsive">
-  <table class="table table-bordered table-notbreakline">
+  <table class="table table-bordered table-notbreakline table-sm">
     <thead>
       <tr>
         <th>Name</th>
