--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Transfers</h1>
 <%= link_to 'New Transfer', new_transfer_path, class: 'btn btn-outline-primary' %>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-sm">
   <thead>
     <tr>
       <th>From</th>
