--- a/app/views/accounts/transactions.html.erb
+++ b/app/views/accounts/transactions.html.erb
@@ -1,11 +1,26 @@
 <h1><%= @account.name %>  Transactions</h1>
 
-<h2>Transactions</h2>
-<%= link_to 'New Transaction', new_transaction_path(account_id: @account), class: 'btn btn-outline-primary btn-sm' %>
-<%= link_to 'New Scheduled Transaction', new_scheduled_transaction_path(account_id: @account), class: 'btn btn-outline-primary btn-sm' %>
-<%= link_to 'New Scheduled Transaction by installments', new_by_installments_scheduled_transactions_path(account_id: @account), class: 'btn btn-outline-primary btn-sm' %>
+<div class="action-bar">
+  <%= link_to 'New Transaction', new_transaction_path(account_id: @account), class: 'btn btn-outline-primary btn-sm' %>
+  <%= link_to 'New Scheduled Transaction', new_scheduled_transaction_path(account_id: @account), class: 'btn btn-outline-primary btn-sm' %>
+  <%= link_to 'New Scheduled Transaction by installments', new_by_installments_scheduled_transactions_path(account_id: @account), class: 'btn btn-outline-primary btn-sm' %>
 
-<%= link_to 'Record Payment', new_transfer_path(account_to_id: @account, value: @account.balance.abs), class: 'btn btn-outline-primary btn-sm' if @account.credit_card? %>
+  <% unless @account.credit_card?%>
+    <div class="dropdown" style="display: inline-block">
+      <a class="btn btn-outline-primary dropdown-toggle btn-sm" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Transfer
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <%= link_to "From #{@account.name}", new_transfer_path(account_from_id: @account), class: 'dropdown-item' %>
+        <%= link_to "To #{@account.name}", new_transfer_path(account_to_id: @account), class: 'dropdown-item' %>
+
+      </div>
+    </div>
+  <% end %>
+
+  <%= link_to 'Record Payment', new_transfer_path(account_to_id: @account, value: @account.balance.abs), class: 'btn btn-outline-primary btn-sm' if @account.credit_card? %>
+</div>
 
 <table class="table table-bordered table-sm">
   <thead>
@@ -60,7 +75,7 @@
           <td class="text-right <%= value_color transaction.amount %>"><%= number_to_currency transaction.amount %></td>
           <td>
             <div class="btn-group btn-group-sm">
-              <%= link_to 'Show', transaction, class: 'btn btn-outline-secondary' %>
+              <!--<%= link_to 'Show', transaction, class: 'btn btn-outline-secondary' %>-->
               <!-- <%= link_to 'Edit', edit_transaction_path(transaction), class: 'btn btn-outline-secondary' %> -->
               <%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger' %>
             </div>
