--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Groups</h1>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-sm">
   <thead>
     <tr>
       <th>Name</th>
