--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,20 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <%# <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">  %>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet"> 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Select2 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #225792;">
+    <%# <nav class="navbar navbar-expand-lg navbar-light sticky-top"> %>
       <%= link_to 'Budget', root_path, class: 'navbar-brand' %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,31 +27,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to 'Budgets', budgets_path, class: 'nav-link' %>
+            <%= link_to 'Budgets', budgets_path, class: 'nav-link ' + navbar_active('budgets') %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Accounts', accounts_path, class: 'nav-link' %>
+            <%= link_to 'Accounts', accounts_path, class: 'nav-link ' + navbar_active('accounts') %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Categories', categories_path, class: 'nav-link' %>
+            <%= link_to 'Categories', categories_path, class: 'nav-link ' + navbar_active('categories') %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Groups', groups_path, class: 'nav-link' %>
+            <%= link_to 'Groups', groups_path, class: 'nav-link ' + navbar_active('groups') %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Months', months_path, class: 'nav-link' %>
+            <%= link_to 'Months', months_path, class: 'nav-link ' + navbar_active('months') %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Payees', payees_path, class: 'nav-link' %>
+            <%= link_to 'Payees', payees_path, class: 'nav-link ' + navbar_active('payees') %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Transactions', transactions_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'Scheduled transactions', scheduled_transactions_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'Transfers', transfers_path, class: 'nav-link' %>
+            <%= link_to 'Scheduled transactions', scheduled_transactions_path, class: 'nav-link ' + navbar_active('scheduled_transactions') %>
           </li>
         </ul>
       </div>
@@ -112,7 +113,7 @@
                   <tr>
                       <td>
                         <%= link_to acc.name, transactions_account_path(acc) %>
-                        <%= link_to '+', new_transaction_path(account_id: acc), class: 'btn btn-outline-light btn-sm float-right' %>
+                        <!--<%= link_to '+', new_transaction_path(account_id: acc), class: 'btn btn-outline-light btn-sm float-right' %>-->
                       </td>
                       <td class="text-right">
                         <span class="badge badge-pill badge-lg <%= badge_color_account acc.balance %>">
@@ -126,7 +127,7 @@
           </div>
         <% end %>
 
-        <div class="col scrollable-y">
+        <div class="col col-content scrollable-y">
           <% if alert.present? %>
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
               <%= alert %>
