--- a/app/views/months/index.html.erb
+++ b/app/views/months/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Months</h1>
 
-<table>
+<table class="table table-bordered table-sm">
   <thead>
     <tr>
       <th>Month</th>
@@ -8,7 +8,7 @@
       <th>Budgeted</th>
       <th>Activity</th>
       <th>To be budgeted</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -20,9 +20,13 @@
         <td><%= month.budgeted %></td>
         <td><%= month.activity %></td>
         <td><%= month.to_be_budgeted %></td>
-        <td><%= link_to 'Show', month %></td>
-        <td><%= link_to 'Edit', edit_month_path(month) %></td>
-        <td><%= link_to 'Destroy', month, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <div class="btn-group btn-group-sm float-right">
+            <%= link_to 'Show', month, class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Edit', edit_month_path(month), class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Destroy', month, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger' %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
