--- a/app/views/payees/index.html.erb
+++ b/app/views/payees/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Payees</h1>
 
 <%= link_to 'New Payee', new_payee_path, class: 'btn btn-outline-primary', class: 'btn btn-outline-primary' %>
-<table class="table table-bordered">
+<table class="table table-bordered table-sm">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -13,9 +13,13 @@
     <% @payees.order(name: :asc).each do |payee| %>
       <tr>
         <td><%= payee.name %></td>
-        <td><%= link_to 'Show', payee %></td>
-        <td><%= link_to 'Edit', edit_payee_path(payee) %></td>
-        <td><%= link_to 'Destroy', payee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <div class="btn-group btn-group-sm float-right">
+            <%= link_to 'Show', payee, class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Edit', edit_payee_path(payee), class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Destroy', payee, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger' %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
