--- a/app/views/scheduled_transactions/_form.html.erb
+++ b/app/views/scheduled_transactions/_form.html.erb
@@ -4,13 +4,16 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.association :account, selected: @scheduled_transaction.persisted? ? @scheduled_transaction.account_id : params[:account_id], wrapper_html: { class: 'col-12 col-sm-2'} %>
+      <%= f.association :account,
+        selected: @scheduled_transaction.persisted? ? @scheduled_transaction.account_id : params[:account_id],
+        wrapper_html: { class: 'col-12 col-sm-2'},
+        input_html: {class: 'select2'} %>
       <%= f.input :date,
             as: :string,
             input_html: { class: 'datepicker', value: f.object.date.present? ? f.object.date.strftime("%d/%m/%Y") : Date.today.strftime("%d/%m/%Y") },
             wrapper_html: { class: 'col-12 col-sm-2'}%>
-      <%= f.association :payee, collection: Payee.order(name: :asc), wrapper_html: { class: 'col-12 col-sm-2'} %>
-      <%= f.association :category, collection: Category.order(name: :asc), wrapper_html: { class: 'col-12 col-sm-2'} %>
+      <%= f.association :payee, collection: Payee.order(name: :asc), wrapper_html: { class: 'col-12 col-sm-2'}, input_html: {class: 'select2'} %>
+      <%= f.association :category, collection: Category.order(name: :asc), wrapper_html: { class: 'col-12 col-sm-2'}, input_html: {class: 'select2'} %>
       <%= f.input :note, wrapper_html: { class: 'col-12 col-sm-2'} %>
       <%= f.input :inflow, as: :string, wrapper_html: { class: 'col-12 col-sm-1'} %>
       <%= f.input :outflow, as: :string, wrapper_html: { class: 'col-12 col-sm-1'} %>
