--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -5,13 +5,22 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.association :account, selected: @transaction.persisted? ? @transaction.account_id : params[:account_id], wrapper_html: { class: 'col-12 col-sm-2'} %>
+      <%= f.association :account,
+        selected: @transaction.persisted? ? @transaction.account_id : params[:account_id],
+        wrapper_html: { class: 'col-12 col-sm-2'},
+        input_html: {class: 'select2'} %>
       <%= f.input :date,
             as: :string,
             input_html: { class: 'datepicker', value: f.object.date.present? ? f.object.date.strftime("%d/%m/%Y") : Date.today.strftime("%d/%m/%Y") },
             wrapper_html: { class: 'col-12 col-sm-2'}%>
-      <%= f.association :payee, collection: Payee.order(name: :asc), wrapper_html: { class: 'col-12 col-sm-2'} %>
-      <%= f.association :category, collection: Category.order(name: :asc).map{|cat| ["#{cat.name} • #{number_to_currency cat.balance}",cat.id]}, wrapper_html: { class: 'col-12 col-sm-2'} %>
+      <%= f.association :payee,
+        collection: Payee.order(name: :asc),
+        wrapper_html: { class: 'col-12 col-sm-2'},
+        input_html: {class: 'select2'} %>
+      <%= f.association :category,
+        collection: Category.order(name: :asc).map{|cat| ["#{cat.name} • #{number_to_currency cat.balance}",cat.id]},
+        wrapper_html: { class: 'col-12 col-sm-2'},
+        input_html: {class: 'select2'} %>
       <%= f.input :note, wrapper_html: { class: 'col-12 col-sm-2'} %>
       <%= f.input :inflow, as: :string, wrapper_html: { class: 'col-12 col-sm-1'} %>
       <%= f.input :outflow, as: :string, wrapper_html: { class: 'col-12 col-sm-1'} %>
