--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Transactions</h1>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-sm">
   <thead>
     <tr>
       <th>Date</th>
