CRUD e inicial de metas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,9 @@
           <li class="nav-item">
             <%= link_to 'Scheduled transactions', scheduled_transactions_path, class: 'nav-link ' + navbar_active('scheduled_transactions') %>
           </li>
+          <li class="nav-item">
+            <%= link_to 'Goals', goals_path, class: 'nav-link ' + navbar_active('goals') %>
+          </li>
         </ul>
       </div>
 
