--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -5,6 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.association :budget, selected: current_budget %>
   </div>
 
   <div class="form-actions">
