--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -203,3 +203,16 @@ table a {
 .select2-selection__arrow {
     height: 35px !important;
 }
+
+
+.bottom-menu{
+	height: 6vh;
+	background-color: #ffffff;
+	display: flex;
+	justify-content: space-between;
+	box-shadow: 0px -2px 2px 0px rgba(0,0,0,0.25);
+}
+
+.bottom-menu-item{
+	align-self: center;
+}
