Improvements on Goals

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -190,7 +190,7 @@ table a {
 }
 
 .col-content{
-	padding-top: 1rem;
+	// padding-top: 1rem;
 	padding-bottom: 1rem;
 }
 
@@ -215,4 +215,8 @@ table a {
 
 .bottom-menu-item{
 	align-self: center;
+}
+
+.right-sidebar{
+	background-color: #e5f1ff;
 }
