--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,10 @@
             <% @categories.each do |group, cats| %>
               <tr class="tr-group">
                 <th><%= group.name %></th>
-                <th class="text-right data"><%= number_to_currency group.categories.inject(0.0){|sum,cat| sum + cat.budgeted} %></th>
+                <th class="text-right data">
+                  <%= number_to_currency group.categories.inject(0.0){|sum,cat| sum + cat.budgeted} %>
+                  (<%= ((group.categories.inject(0.0){|sum,cat| sum + cat.budgeted} / @to_be_budgeted.activity)*100).round(2) %>)%
+                </th>
                 <th class="d-none d-sm-block text-right data"><%= number_to_currency group.categories.inject(0.0){|sum,cat| sum + cat.activity} %></th>
                 <th class="text-right data"><%= number_to_currency group.categories.inject(0.0){|sum,cat| sum + cat.balance} %></th>
               </tr>
@@ -41,7 +44,7 @@
         </table>
       </div>
     </div>
-    <div class="col-12 col-sm-3 scrollable-y">
+    <div class="col-12 col-sm-3 scrollable-y right-sidebar">
       <% @categories.each do |group,cats| %>
         <% cats.each do |cat| %>
           <div class="side_options_cat_<%= cat.id %>">
@@ -77,8 +80,35 @@
 
               <h4>Goals</h4>
               <% cat.goals.each do |goal| %>
-                <p><%= goal.inspect %></p>
+                <div class="card">
+                  <strong><%= goal.goal_type.titleize %></strong>
+                  <%= number_to_currency goal.amount %>
+                  <%= l goal.date if goal.date.present? %>
+                  <%= goal.percentage %>%
+                </div>
               <% end %>
+
+              <button class="btn btn-sm btn-outline-primary" onclick="javascript:goalSlideToggle(event);">Add goal</button>
+
+              <div class="slideToggle">
+                <%= simple_form_for(cat.goals.build) do |f| %>
+                  <%= f.error_notification %>
+                  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+                  <div class="form-inputs">
+                    <%= f.association :category, collection: current_budget.categories.order(name: :asc), input_html: {class: 'select2'} %>
+                    <%= f.input :goal_type, collection: Goal.goal_types.keys.map{|gt|[gt.titleize,gt]} %>
+                    <%= f.input :amount %>
+                    <%= f.input :date, as: :string, input_html: { class: 'datepicker'} %>
+                    <%= f.input :percentage %>
+                  </div>
+
+                  <div class="form-actions">
+                    <%= f.button :submit, class: 'btn btn-outline-primary' %>
+                  </div>
+                <% end %>
+              </div>
+
             <% end %>
           </div>
         <% end %>
