Fix not showinw Goals

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -49,8 +49,9 @@
         <% cats.each do |cat| %>
           <div class="side_options_cat_<%= cat.id %>">
 
-            <% if cat.scheduled_transactions.where(date: Time.now.beginning_of_month..Time.now.end_of_month, done: false).any? %>  
-              <h3><%= cat.name%> </h3>
+            <h3><%= cat.name%> </h3>
+            <% if cat.scheduled_transactions.where(date: Time.now.beginning_of_month..Time.now.end_of_month, done: false).any? %>
+              <h4>Scheduled Transactions</h4>
               <table class="table table-bordered table-sm">
                 <thead>
                   <tr>
@@ -77,6 +78,8 @@
                   <% end %>
                 </tbody>
               </table>
+
+            <% end %>
 
               <h4>Goals</h4>
               <% cat.goals.each do |goal| %>
@@ -108,8 +111,6 @@
                   </div>
                 <% end %>
               </div>
-
-            <% end %>
           </div>
         <% end %>
       <% end %>
