--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :budgeted %>
     <%= f.input :activity %>
     <%= f.input :balance %>
+    <%= f.input :count_in_the_statistics %>
     <%= f.association :group %>
   </div>
 
