Add note to category

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.input :activity %>
     <%= f.input :balance %>
     <%= f.input :count_in_the_statistics, as: :boolean %>
+    <%= f.input :note %>
     <%= f.association :group %>
   </div>
 
